// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ColumnsMiniView > should match render of template 1 1`] = `
<div>
  <div
    class="test-columns-mini-view columns-mini-view"
  >
    <div
      class="columns-mini-view__column columns-mini-view__column--border-first accent-color__backlog-blue"
    >
      <span
        class="columns-mini-view__column-index"
      >
        1
      </span>
    </div>
    <div
      class="columns-mini-view__column columns-mini-view__column--hidden columns-mini-view__column--border-last accent-color__planning-pink"
    >
      <span
        class="columns-mini-view__column-index"
      >
        2
      </span>
    </div>
  </div>
</div>
`;

exports[`ColumnsMiniView > should match render of template 2 1`] = `
<div>
  <div
    class="test-columns-mini-view columns-mini-view"
  >
    <div
      class="columns-mini-view__column columns-mini-view__column--border-all accent-color__goal-green"
    >
      <span
        class="columns-mini-view__column-index"
      >
        1
      </span>
    </div>
  </div>
</div>
`;

exports[`ColumnsMiniView should match render of template 1 1`] = `
<div>
  <div
    class="test-columns-mini-view columns-mini-view"
  >
    <div
      class="columns-mini-view__column columns-mini-view__column--border-first accent-color__backlog-blue"
    >
      <span
        class="columns-mini-view__column-index"
      >
        1
      </span>
    </div>
    <div
      class="columns-mini-view__column columns-mini-view__column--hidden columns-mini-view__column--border-last accent-color__planning-pink"
    >
      <span
        class="columns-mini-view__column-index"
      >
        2
      </span>
    </div>
  </div>
</div>
`;

exports[`ColumnsMiniView should match render of template 2 1`] = `
<div>
  <div
    class="test-columns-mini-view columns-mini-view"
  >
    <div
      class="columns-mini-view__column columns-mini-view__column--border-all accent-color__goal-green"
    >
      <span
        class="columns-mini-view__column-index"
      >
        1
      </span>
    </div>
  </div>
</div>
`;
